@@ -28,6 +28,11 @@ DebugLevel=2
 
 PidFile=/var/tmp/zabbix_agentd.pid
 
+# Name of log file.
+# If not set, syslog will be used
+
+# LogFile=/tmp/zabbix_agentd.log
+
 # Spend no more than Timeout seconds on processing
 # Must be between 1 and 30
 
