@@ -33,6 +33,11 @@ Timeout=5
 
 PidFile=/var/tmp/zabbix_suckerd.pid
 
+# Name of log file
+# If not set, syslog is used
+
+#LogFile=/tmp/zabbix_suckerd.log
+
 # Database name
 
 DBName=zabbix
