@@ -16,6 +16,11 @@ DebugLevel=2
 
 Timeout=3
 
+# Name of log file
+# If not set, syslog will be used
+
+#LogFile=/tmp/zabbix_trapper.log
+
 # Database name
 
 DBName=zabbix
