@@ -26,6 +26,11 @@ DebugLevel=2
 
 PidFile=/tmp/zabbix_trapperd.pid
 
+# Name of log file
+# If not set, syslog will be used
+
+#LogFile=/tmp/zabbix_trapper.log
+
 # Spend no more than Timeout seconds on processing
 # Must be between 1 and 30
 
