@@ -27,6 +27,7 @@
 #include "functions.h"
 
 int	CONFIG_TIMEOUT		= TRAPPER_TIMEOUT;
+char	*CONFIG_LOG_FILE	= NULL;
 char	*CONFIG_DBNAME		= NULL;
 char	*CONFIG_DBUSER		= NULL;
 char	*CONFIG_DBPASSWORD	= NULL;
@@ -122,6 +123,10 @@ void	process_config_file(void)
 			}
 			CONFIG_TIMEOUT=i;
 		}
+		else if(strcmp(parameter,"LogFile")==0)
+		{
+			CONFIG_LOG_FILE=strdup(value);
+		}
 		else if(strcmp(parameter,"DBName")==0)
 		{
 			CONFIG_DBNAME=strdup(value);
@@ -174,8 +179,14 @@ int	main()
 	//	ret=setlogmask(LOG_UPTO(LOG_DEBUG));
 //	ret=setlogmask(LOG_UPTO(LOG_WARNING));
 
-	zabbix_open_log(LOG_TYPE_FILE,LOG_LEVEL_WARNING,"/tmp/tmp.zzz");
-
+	if(CONFIG_LOG_FILE == NULL)
+	{
+		zabbix_open_log(LOG_TYPE_SYSLOG,LOG_LEVEL_WARNING,NULL);
+	}
+	else
+	{
+		zabbix_open_log(LOG_TYPE_FILE,LOG_LEVEL_WARNING,CONFIG_LOG_FILE);
+	}
 
 	process_config_file();
 	
